# offgrid-inverter

./: .gitignore  PROVEN.md  README.md  SPEC.md  config.yaml  discover_serial.py  discover_serial2.py  pyproject.toml  read_live.py  read_raw.py  scan_holding.py
scripts/: backup_db.py  gen_holidays.py  gen_icons.py  install_tasks.ps1  simulate.py  test_alerts.py
src/solarapi/: __init__.py  __main__.py  app.py  history.py  queries.py
src/solarmon/: __init__.py  alerts.py  collector.py  config.py  connection.py  costs.py  db.py  derived.py  fake_source.py  faults.py  log.py  main.py  outage.py  peaks.py  registers.py  rollup.py  runtime_est.py  sun.py  tou.py
src/solarmon/migrations/: 001_initial.sql
tests/: conftest.py  test_alerts.py  test_api.py  test_collector.py  test_config.py  test_connection.py  test_costs.py  test_db.py  test_derived.py  test_history.py  test_outage.py  test_registers.py  test_rollup.py  test_runtime_est.py  test_sun.py  test_tou.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/public/: manifest.webmanifest
web/src/: App.jsx  api.js  demo.js  format.js  index.css  rates.js
web/src/charts/: BatteryTrend.jsx  CalendarHeatmap.jsx  DayRing.jsx  EChart.jsx  EventLog.jsx  LoadProfile.jsx  OutageHistory.jsx  TouSection.jsx  echarts.js  theme.js
web/src/components/: BurnDown.jsx  EnergyFlow.jsx  HeadroomLanes.jsx  TabBar.jsx  icons.jsx  primitives.jsx
web/src/hooks/: useLiveState.js
web/src/pages/: Gallery.jsx  History.jsx  Home.jsx  Outage.jsx  Settings.jsx  Technical.jsx
