[project]
name = "solarmon"
version = "0.1.0"
description = "Collector daemon for the SunGoldPower SPH6548P + Solarman stick (read-only monitoring)"
requires-python = ">=3.11"
dependencies = [
    "pysolarmanv5>=3.0.6",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "requests>=2.31",
    "tzdata>=2024.1",  # Windows has no system tz database; zoneinfo needs this
]

[project.optional-dependencies]
# Web dashboard (phase 2). Kept out of the base install so the collector,
# which must never depend on the web layer, stays lean. Plain uvicorn (not
# [standard]) to avoid heavyweight extras; SSE is just HTTP streaming.
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "httpx>=0.27",  # FastAPI TestClient
]

[project.scripts]
solarmon-collector = "solarmon.main:main"
solarmon-web = "solarapi.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
solarmon = ["data/*.json", "migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Pre-build diagnostic scripts kept for reference (see PROVEN.md); not linted
extend-exclude = [
    "read_live.py",
    "discover_serial.py",
    "discover_serial2.py",
    "read_raw.py",
    "scan_holding.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
